--- a/RADTest.dproj
+++ b/RADTest.dproj
@@ -287,6 +287,11 @@
             <Form>Form1</Form>
             <FormType>fmx</FormType>
         </DCCReference>
+        <DCCReference Include="NewUnit.pas"/>
+        <DCCReference Include="NewForm.pas">
+            <Form>Form2</Form>
+            <FormType>fmx</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
